--- a/projects/dev/kubestronaut-predictor-deploy-kustomization.yaml
+++ b/projects/dev/kubestronaut-predictor-deploy-kustomization.yaml
@@ -6,3 +6,11 @@ metadata:
   namespace: kubestronaut-predictor
 spec:
   path: ./flux/dev
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: kubestronaut-predictor-deploy
+  namespace: monitoring
+spec:
+  path: ./flux/dev
