--- a/projects/dev/monitoring-deploy-kustomization.yaml
+++ b/projects/dev/monitoring-deploy-kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: kubestronaut-predictor-deploy
+  name: monitoring-deploy
   namespace: monitoring
 spec:
   path: ./flux/dev
