--- a/projects/base/monitoring/monitoring-deploy-kustomization.yaml
+++ b/projects/base/monitoring/monitoring-deploy-kustomization.yaml
@@ -8,7 +8,8 @@ spec:
   interval: 1m0s
   path: ./flux
   prune: false
-  serviceAccountName: monitoring--source=GitRepository/kubestronaut-predictor-deploy
+  serviceAccountName: monitoring
+  targetNamespace: monitoring
   sourceRef:
-    kind: ""
-    name: ""
+    kind: GitRepository
+    name: kubestronaut-predictor-deploy
