--- a/projects/base/monitoring/monitoring-deploy-gitrepository.yaml
+++ b/projects/base/monitoring/monitoring-deploy-gitrepository.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: monitoring-deploy
+  name: kubestronaut-predictor-deploy-deploy
   namespace: monitoring
 spec:
   interval: 1m0s
