--- a/projects/base/monitoring/monitoring-deploy-kustomization.yaml
+++ b/projects/base/monitoring/monitoring-deploy-kustomization.yaml
@@ -12,4 +12,4 @@ spec:
   targetNamespace: monitoring
   sourceRef:
     kind: GitRepository
-    name: monitoring-deploy
+    name: kubestronaut-predictor-deploy
